--- a/app/src/main/res/layout/post_list_view.xml
+++ b/app/src/main/res/layout/post_list_view.xml
@@ -108,7 +108,7 @@
 
         <Button
             android:id="@+id/Delete"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:layout_gravity="center"
             android:layout_weight="0.1"
