--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,14 +18,14 @@
 
             <ImageView
                 android:layout_width="155dp"
-                android:layout_height="124dp"
+                android:layout_height="145dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="30dp"
                 android:adjustViewBounds="false"
                 android:contentDescription="@string/logo"
                 android:cropToPadding="false"
                 android:rotationX="-19"
-                android:scaleType="fitXY"
+                android:scaleType="centerInside"
                 android:src="@drawable/logo2" />
 
             <EditText
