--- a/app/src/main/res/layout/post_list_view.xml
+++ b/app/src/main/res/layout/post_list_view.xml
@@ -107,7 +107,7 @@
             android:textSize="16sp" />
 
         <Button
-            android:id="@+id/Delete"
+            android:id="@+id/btn_delete"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:layout_gravity="center"
