--- a/app/src/main/res/layout/post_list_view.xml
+++ b/app/src/main/res/layout/post_list_view.xml
@@ -59,7 +59,7 @@
         android:layout_marginEnd="8dp"
         android:layout_weight="0.7"
         android:background="@drawable/round_corner5"
-        android:gravity="center"
+        android:gravity="left"
         android:inputType="textMultiLine"
         android:maxLines="20"
         android:padding="10pt"
